# reddit-fetcher

./: .gitignore  Cargo.toml  README.md
src/: arg_parser.rs  downloader.rs  main.rs  types.rs
