[package]
name = "reddit-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.26"
lazy-regex = "2.5.0"
log = "0.4.17"
owo-colors = "3.5.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
unicode-segmentation = "1.10.1"
