[package]
name = "reddit-fetcher"
version = "0.1.1"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "rfetcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
env_logger = "0.10.0"
lazy-regex = "2.5.0"
log = "0.4.17"
owo-colors = "3.5.0"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
unicode-segmentation = "1.10.1"
