[package]
name = "reddit-fetcher"
version = "0.1.3"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "rfetcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
lazy-regex = "2.5.0"
log = "0.4.17"
owo-colors = "3.5.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs"] }
unicode-segmentation = "1.10.1"
